--- a/style.css
+++ b/style.css
@@ -31,28 +31,28 @@ main {
 }
 
 .intro-chunk {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1rem;
 }
 
 .card {
   margin: 0 auto;
   width: fit-content;
   background: white;
-  padding: 8px;
+  padding: 0.5rem;
 }
 
 .card p {
-  padding-inline: 8px;
+  padding-inline: 0.5rem;
 }
 
 .indented-heading {
   width: fit-content;
-  padding: 8px 16px;
+  padding: 0.5rem 1.5rem;
   margin: 0;
-  margin-left: -16px;
+  margin-left: -1rem;
   background: hsl(45deg, 100%, 50%);
-  border-bottom: 8px solid hsl(45deg, 100%, 40%); 
+  border-bottom: 0.5rem solid hsl(45deg, 100%, 40%); 
   font-weight: bold;
 }
